--- a/NCOM_WebSite/Web.config
+++ b/NCOM_WebSite/Web.config
@@ -12,7 +12,7 @@
       <httpRuntime targetFramework="4.7.2"/>
     </system.web>
   <connectionStrings>
-    <add name="SQLDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\mm_om\source\repos\SVU_ISE_WB_S19_Project\NCOM_WebSite\App_Data\NCOM_DB.mdf;Integrated Security=True" />
+    <add name="SQLDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\NCOM_DB.mdf;Integrated Security=True" />
   </connectionStrings>
     <system.codedom>
         <compilers>
