just to remembeR

--- a/NCOM_WebSite/Web.config
+++ b/NCOM_WebSite/Web.config
@@ -9,6 +9,11 @@
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
+      <pages>
+		    <controls>
+		       <add tagPrefix="CU" src ="~/OrphanageItem.ascx" tagName="OrphanageItem"/>
+		    </controls>
+	  </pages>
     </system.web>
   <connectionStrings>
       <add name="SQLDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\NCOM_DB.mdf;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"  />
